remove trailing space (which caused cmake to fail during configuration) and make sure fabrikConfigVersion.cmake is actually created

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,7 +11,7 @@ include(GNUInstallDirs)
 find_package(OpenSceneGraph COMPONENTS REQUIRED)
 add_library(fabrik ${HEADERS} ${SOURCES})
 target_link_libraries(fabrik PUBLIC ${OPENSCENEGRAPH_LIBRARIES})
-target_include_directories(fabrik PUBLIC ${OPENSCENEGRAPH_INCLUDE_DIRS} "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR} >" "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>")
+target_include_directories(fabrik PUBLIC ${OPENSCENEGRAPH_INCLUDE_DIRS} "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>" "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>")
 #add_subdirectory(angle_calculator)
 
 # make cache variables for install destinations
@@ -33,6 +33,12 @@ install(EXPORT fabrikTargets
 )
 message(STATUS "CMAKE_INSTALL_LIBDIR: ${CMAKE_INSTALL_LIBDIR}")
 include(CMakePackageConfigHelpers)
+
+write_basic_package_version_file(
+  "${CMAKE_CURRENT_BINARY_DIR}/fabrikConfigVersion.cmake"
+  VERSION 1.0.0
+  COMPATIBILITY AnyNewerVersion
+)
 
 configure_package_config_file(${CMAKE_CURRENT_SOURCE_DIR}/Config.cmake.in
   "${CMAKE_CURRENT_BINARY_DIR}/fabrikConfig.cmake"
